--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,7 @@ pip-log.txt
 .tox
 nosetests.xml
 coverage.xml
+coverage-reports
 .pytest_cache
 
 # Sphinx
@@ -50,6 +51,8 @@ README.html
 
 # datasets
 data
+tests/data
+tests/temp
 
 # Others
 .DS_Store
